# smilegen

./: .gitignore  CLAUDE.md  Makefile  Research_Smilefy_SmileCloud_Exocad.md  agent_implementation_guide.md  docker-compose.yml  package.json  pnpm-lock.yaml  smile_design_competitive_analysis.md  smilegen_ui.md  standalone_competitive_analysis.md  tsconfig.base.json
.agent-review/: review_20260313_004409_contextreview_prompt.md
.agent-review/context/: review_20260313_004409_context.md
.claude/: launch.json
.claude-octopus/: state.json
.github/workflows/: release.yml
.kilo/: kilo.json
apps/api/: .env.example  conftest.py  pyproject.toml
apps/api/prisma/: schema.prisma
apps/api/src/: config.py  main.py
apps/api/src/models/: landmark.py
apps/api/src/routers/: alignments.py  assets.py  cases.py  patients.py
apps/api/src/services/: storage.py
apps/api/tests/: test_assets_api.py  test_cases_api.py  test_db_models.py  test_health.py
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  main.rs  photo_alignment.rs
apps/mesh/: mesh-server.spec  pyproject.toml  run.py
apps/mesh/src/: main.py
apps/mesh/src/routers/: synthesis.py
apps/mesh/src/services/: crown_generator.py  intaglio.py  veneer_generator.py
apps/mesh/src/smilegen_mesh.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/mesh/tests/: test_crown.py  test_intaglio.py  test_synthesis_api.py  test_veneer.py
apps/vision/: conftest.py  pyproject.toml  run.py  vision-server.spec
apps/vision/src/: main.py
apps/vision/src/routers/: landmarks.py  masks.py
apps/vision/src/services/: landmark_detector.py  mask_generator.py
apps/vision/tests/: test_landmarks.py  test_masks.py
docs/: best-25-skills-by-role.md
docs/debug/: landmark-alignment-analysis.md
docs/plans/: 2026-03-07-smile-consultation-stl-design.md  2026-03-07-smile-consultation-stl-implementation.md  2026-03-08-cloud-native-expansion.md  2026-03-08-comprehensive-refactor-design.md  2026-03-08-comprehensive-refactor-implementation.md  2026-03-08-smilegen-implementation-plan.md  2026-03-08-smilegen-product-prd.md  2026-03-08-smilegen-routes-components-design.md  2026-03-08-smilegen-workflow-ia-design.md  2026-03-09-smilegen-workflow-refactor-implementation.md  2026-03-10-vision-tauri-design.md  2026-03-10-vision-tauri-implementation.md  2026-03-11-alignment-wizard-implementation.md  2026-03-11-alignment-wizard-redesign.md  2026-03-12-desktop-bundle-optimization-design.md  2026-03-12-desktop-bundle-optimization-implementation.md  2026-03-25-alignment-bug-fixes-final.md  (+17 more)
(+205 files in other folders)
