# apps/mesh/pyproject.toml
[project]
name = "smilegen-mesh"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "trimesh>=4.3",
    "numpy>=1.26",
    "scipy>=1.13",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "networkx>=3.3",
    "manifold3d>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "anyio>=4",
    "pytest-anyio>=0.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
