# apps/vision/pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smilegen-vision"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "mediapipe>=0.10",
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
    "Pillow>=10.3",
    "httpx>=0.27",
    "boto3>=1.34",
    "python-multipart>=0.0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
# conftest.py pins anyio_backend fixture to asyncio only
